# StdSentry2026

./: build.sh  start_intelligent_rescue.sh
.docs/: SYSTEM_ARCHITECTURE.md
src/auto_aim_interfaces/: CMakeLists.txt  package.xml
src/auto_aim_interfaces/msg/: ArmorChoose.msg  GimbalCmd.msg  SerialReciveData.msg
src/auto_aim_interfaces/srv/: SetMode.srv
src/rm_nav_bringup/config/reality/: MID360_config.json  measurement_params_real.yaml  nav2_params_real.yaml
src/rm_nav_bringup/launch/: bringup_real.launch.py
src/rm_nav_bringup/map/: test1.data  test1.pgm  test1.yaml
src/rm_nav_bringup/urdf/: sentry_robot_real.xacro
src/rm_simulation/pb_rm_simulation/meshes/obstacles/obstacle_plugin/: CMakeLists.txt
src/sentry_control/: CMakeLists.txt  README.md  package.xml
src/sentry_control/include/sentry_control/: sentry_communication.hpp  sentry_nav_goal.hpp
src/sentry_control/launch/: sentry_control.launch.py
src/sentry_control/src/: sentry_communication.cpp  sentry_nav_goal.cpp  test_nav.cpp
src/sentry_nav_decision_interface/: CMakeLists.txt  package.xml
src/sentry_nav_decision_interface/msg/: Referee.msg
src/serial/: CMakeLists.txt
